# chlint

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.cursor/commands/: generate-chlint-rule.md
.cursor/skills/clickhouse-query-ast/: SKILL.md
.opencode/commands/: design_feature.md
docs/conventions/: architecture.md
src/: main.py
src/core/: __init__.py  _ast_node.py  _base_rule.py  _parser.py  _utils.py
src/rules/: CL001.py  CL002.py  CL003.py  CL004.py  __init__.py
tests/: test_CL001.py  test_CL002.py  test_CL003.py  test_CL004.py
