[project]
name = "chlint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]


[tool.ruff]

line-length = 120

[tool.ruff.lint]

ignore = [
    "I",
    "EM",
    "FBT",
    "TRY003",
    "S101",
    "D1",
    "D203",
    "D212",
    "FA",
    "COM812"
]
select = ["ALL"]
fixable = ["ALL"]

[tool.mypy]
strict = true
