[project]
name = "chlint"
version = "0.1.0"
description = "Experimental ClickHouse SQL linter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chdb>=4.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.6",
]


[tool.ruff]

line-length = 120

[tool.ruff.lint]

ignore = [
    "I",
    "EM",
    "FBT",
    "TRY003",
    "S101",
    "D1",
    "D203",
    "D212",
    "FA",
    "COM812"
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/rules/**/*.py" = ["N999"]
"tests/**/*.py" = ["N999"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
